Add to .gitignore:     +DataforSimplifiedModel.csv     +MainApp - Debug Version.py     +predictions.txt     +Modeling SimplifiedLR in Python.py     +snapshot_formatter_debugger.py     +snapshot_parser debugger.py     +test.py     +Time_Delay.py

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,10 @@
 __pycache__
 CSGO-GSI/logs/*
-aiajifja
+DataforSimplifiedModel.csv
+MainApp - Debug Version.py
+predictions.txt
+Modeling SimplifiedLR in Python.py
+snapshot_formatter_debugger.py
+snapshot_parser debugger.py
+test.py
+Time_Delay.py
