Add missing quotation mark

--- a/CSGO-GSI/gamestate_integration_CSGOPredictor.cfg
+++ b/CSGO-GSI/gamestate_integration_CSGOPredictor.cfg
@@ -1,4 +1,4 @@
-"GSI for CSGO Predictor App by d-roho
+"GSI for CSGO Predictor App by d-roho"
 {
     "uri" "http://127.0.0.1:3000"
     "timeout" "1.1"
