--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,5 @@ test2.py
 .vscode/settings.json
 TaskList.md
 CSGOPredictor Intro Video.mp4
+READMEDocs/CSGOPredictor Gif V2.mp4
+READMEDocs/SteamIntro.gif
