--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,4 @@ TaskList.md
 CSGOPredictor Intro Video.mp4
 READMEDocs/CSGOPredictor Gif V2.mp4
 READMEDocs/SteamIntro.gif
+READMEDocs/SteamLogo.png
